<resources>
    <string name="app_name">CTM</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="home">Home</string>
    <string name="settings">Settings</string>

    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <string name="input_help">For instructions on how to find your ID</string>
    <string name="click_here">Click Here</string>
    <string name="user_input">User Input</string>

    <string name="input_hint">Type your Identification Here</string>
    <string name="action_dialog">Launch Dialog</string>

    <string name="no_internet">Internet not detected, please ensure you are connected to the internet.</string>
</resources>
