<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@android:color/darker_gray"
    android:layout_width="fill_parent"
    android:layout_height="350dp" >

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="email"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/user_input"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <View
        android:id="@+id/divider"
        android:background="@android:color/black"
        android:layout_width="match_parent"
        android:layout_below="@+id/dialogTitle"
        android:layout_height="1dp"/>

    <EditText
        android:id="@+id/userInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/input_hint"
        android:background="@drawable/border"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/divider"
        android:inputType="textMultiLine|textNoSuggestions"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="12dp"/>

    <TextView
        android:id="@+id/inputHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autoLink="email"
        android:layout_below="@+id/userInput"
        android:layout_centerHorizontal="true"
        android:text="@string/input_help"
        android:layout_margin="10dp"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <LinearLayout
        android:id="@+id/btnLayout"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/dialogButtonOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:layout_margin="10dp"
            />
        <Button
            android:id="@+id/dialogButtonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_margin="10dp"
            />
    </LinearLayout>

    <ListView
        android:id="@+id/searchListView"
        android:layout_above="@+id/btnLayout"
        android:dividerHeight="1dp"
        android:divider="#000000"
        android:layout_below="@+id/inputHelp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </ListView>

</RelativeLayout>